frontend(site): fix vertical alignment on frontpage

--- a/frontend/packages/editor/src/editor.css
+++ b/frontend/packages/editor/src/editor.css
@@ -4,7 +4,6 @@
   max-width: calc(80ch + 108px);
   margin: 40px auto 60px auto;
   width: 100%;
-  background-color: red;
 }
 
 .ProseMirror {
